# Hass-Room-Sensor

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
ecad/: HassRoomSensor.kicad_pcb  HassRoomSensor.kicad_prl  HassRoomSensor.kicad_pro  HassRoomSensor.kicad_sch  README.md  _autosave-HassRoomSensor.kicad_prl  fabrication-toolkit-options.json  fp-info-cache  fp-lib-table  ibom.config.ini  sym-lib-table
ecad/Lib/Footprints/: BME690.kicad_mod  BOSCH_BMP390.kicad_mod  XDCR_SCD40-D-R2.kicad_mod  XIAO-ESP32C3.kicad_mod  XIAO-ESP32C6.kicad_mod
ecad/Lib/Symbols/: BME690.bak  BME690.kicad_sym  BMP390L.kicad_sym  SCD40-D-R2.kicad_sym  XIAO-ESP32C3.bak  XIAO-ESP32C6.kicad_sym
ecad/bom/: ibom.html
ecad/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
esp32/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
esp32/main/: CMakeLists.txt  DeviceDefs.hpp  HassSensorMain.cpp  Kconfig  idf_component.yml
esp32/main/actuators/: RgbLed.cpp  RgbLed.hpp
esp32/main/defs/: DeviceDefs.hpp
esp32/main/sensors/: Battery.cpp  Battery.hpp  GpioInput.hpp  IBattery.hpp  Scd41.cpp  Scd41Mock.cpp
esp32/main/zigbee/: ZDevice.cpp  ZDevice.hpp
esp32/ota/: index.json
esp32_h2/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp32_h2/main/: CMakeLists.txt  HassSensorMain.cpp  idf_component.yml
esp32_h2/main/actuators/: RgbLed.cpp  RgbLed.hpp
esp32_h2/main/sensors/: IScd41.hpp  Scd41.cpp  Scd41.hpp  Scd41Mock.hpp
esp32_h2/main/zigbee/: ZDevice.cpp  ZDevice.hpp
firmware/: README.md
firmware/esp32/: .clang-tidy  README.md  partitions.csv  sdkconfig.debug  sdkconfig.defaults  sdkconfig.release
firmware/esp32/docs/: seed_studio_xiao_esp32_c6_sensor_board.drawio
firmware/esp32/main/: CMakeLists.txt  DeviceDefs.hpp  HassSensorMain.cpp
firmware/esp32/main/actuators/: Led.cpp  Led.hpp  RgbLed.hpp
firmware/esp32/main/defs/: DeviceDefs.hpp
firmware/esp32/main/devices/: AbstractDeviceEventListener.hpp  DebugRgbLedDevice.cpp  DebugRgbLedDevice.hpp  DeviceEventListenerFactory.cpp  DeviceEventListenerFactory.hpp  Esp32C6DevKitDevice.cpp  Esp32C6DevKitDevice.hpp  Esp32H2DevKitDevice.cpp  Esp32H2DevKitDevice.hpp  SeedStudioXiaoEspC6Device.cpp  SeedStudioXiaoEspC6Device.hpp
firmware/esp32/main/sensors/: AbstractScd41.cpp  AbstractScd41.hpp  Battery.cpp  Battery.hpp  GpioInput.cpp  IBattery.hpp  Scd41.hpp  Scd41Mock.hpp
firmware/esp32/main/zigbee/: ZDevice.cpp  ZDevice.hpp  ZigbeeDeviceState.hpp
firmware/esp32/ota/: index.json
firmware/esphome/: esphome.yaml
mcad/: README.md
